Changed controllers from all using POST method to GET, which makes more sense. Added PINIA to the frontend and made it compatible with updated backend. Improved authentication system. Prepared BaseController and CurrencyController. Added indexing to the models to improve querying speeds.